--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/moment": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@tanstack/query-core": "^5.50.1",
@@ -18,8 +26,10 @@
     "@tanstack/react-query-next-experimental": "^5.50.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^3.6.0",
     "jotai": "^2.9.0",
     "jotai-tanstack-query": "^0.8.5",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
