--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.15",
@@ -21,6 +23,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@mui/material": "^5.16.7",
     "@tanstack/query-core": "^5.50.1",
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-next-experimental": "^5.50.1",
