--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "swr": "^2.2.5",
