--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@mui/material": "^5.16.7",
-    "@tanstack/query-core": "^5.50.1",
+    "@tanstack/query-core": "^5.61.5",
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-next-experimental": "^5.50.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
-    "jotai": "^2.9.0",
-    "jotai-tanstack-query": "^0.8.5",
+    "jotai": "^2.10.3",
+    "jotai-tanstack-query": "^0.8.8",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -57,12 +57,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
-    "postcss": "^8",
+    "postcss": "^8.4.49",
     "storybook": "^8.1.11",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
