--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/material": "^5.16.7",
     "@tanstack/query-core": "^5.61.5",
     "@tanstack/react-query": "^5.50.1",
@@ -43,7 +44,8 @@
     "react-responsive": "^10.0.0",
     "react-splide-ts": "^0.7.14",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
