--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-splide-ts": "^0.7.14",
+    "react-toastify": "^10.0.6",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
