--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "jotai": "^2.10.3",
     "jotai-tanstack-query": "^0.8.8",
     "moment": "^2.30.1",
